src/main/java/org/example/breakoutdrop/Errors/ClientHTTP/PaymentRequired402.java
package org.example.breakoutdrop.Errors.Client;

public class PaymentRequired402 extends RuntimeException {
    public PaymentRequired402(String message) {
        super(message);
    }
}
